@@ -1,5 +1,13 @@
 2002-03-07  Richard Hult  <rhult@codefactory.se>
 
+	* src/main.c (main): Remove unnecessary init calls.
+	Add back popt parsing.
+
+	* src/devhelp-window.c (devhelp_window_new): Set window icon.
+
+	* src/help-browser.c (impl_HelpBrowser_search): Use
+	gtk_window_present to show the window.
+
 	* src/devhelp-search.c (devhelp_search_complete_idle): Need to
 	select first, then set position, otherwise the selection will be
 	cleared.
